Fix incorrect message body overflow behaviour

--- a/src/components/ChatMessage.module.css
+++ b/src/components/ChatMessage.module.css
@@ -41,9 +41,9 @@
 
 .body {
   font-size: 16px;
-  line-height: 12px;
+  min-height: 20px;
   max-height: 100px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .body-ours {
